@@ -27,6 +27,7 @@ package driver.local;
 import driver.IDriver;
 import io.github.bonigarcia.wdm.DriverManagerType;
 import io.github.bonigarcia.wdm.WebDriverManager;
+import java.lang.reflect.InvocationTargetException;
 import lombok.extern.log4j.Log4j2;
 import org.openqa.selenium.WebDriver;
 
@@ -41,10 +42,10 @@ public class LocalDriverManager implements IDriver {
             DriverManagerType driverManagerType = DriverManagerType.valueOf(browser.toUpperCase());
             Class<?> driverClass = Class.forName(driverManagerType.browserClass());
             WebDriverManager.getInstance(driverManagerType).setup();
-            driver = (WebDriver) driverClass.newInstance();
+            driver = (WebDriver) driverClass.getDeclaredConstructor().newInstance();
         } catch (IllegalAccessException | ClassNotFoundException e) {
             log.error("The class could not be found", e);
-        } catch (InstantiationException e) {
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             log.error("Problem during driver instantiation", e);
         }
         return driver;
